# neptun

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  deploy.sh  neptun.service  secrets.env.example
.github/workflows/: deploy.yml
migrations/: 0001_init.sql  0002_slug.sql
src/: config.rs  main.rs  models.rs
