[package]
name = "neptun"
version = "0.1.5"
edition = "2021"

[dependencies]
rand = "0"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = "1"
serde_json = "1"
sqlx = { version = "0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "json",
] }
sqlx-cli = { version = "0.7", features = ["sqlite", "completions"] }

[dependencies.teloxide]
git = "https://github.com/teloxide/teloxide.git"
version = "0"
features = ["macros", "sqlite-storage-nativetls"]
branch = "master"
